# jobeff

./: .flake8  README.md  pyproject.toml
jobeff/: jobeff.py
tests/: test_jobeff.py
